--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,14 @@ footer p:last-of-type{
 	}
 	
 }
+@media (max-width:710px) {
+
+	#offer-text {
+		float: none;
+		width: 100%;
+		padding-left: 0;
+	}
+}
 @media (max-width:479px) {
     #intro {
 		width: 100%;
