--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ nav ul li:last-of-type a:before {
 	margin: 0 0 30px 0;
 }
 #services h2 {
-	margin: 55px 0 0 0;
+	margin: 55px 0 15px 0;
 }
 #services {
 	box-shadow: 0 0 8px rgba(0,0,0,0.8);
