--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ nav ul li:last-of-type a:before {
 }
 #testimonials {
 	background: url('../img/testi-bg.jpg') top center no-repeat;
+	background-size: cover;
 	padding: 70px 50% 70px 40px;
 	box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.9);
 }
@@ -290,6 +291,9 @@ footer p:last-of-type{
 	}
 	#intro {
 		margin: 100px 0;	
+	}
+	#testimonials {
+		background-size: cover;
 	}
 }
 
